acceptance/tests/fixtures/cases/custom-api-gateway/jwt-auth/api-gateway.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1beta1
kind: Gateway
metadata:
  name: custom-gateway
  labels:
    component: api-gateway-consul
spec:
  gatewayClassName: custom-gateway-class
  listeners:
  - protocol: HTTP
    port: 83
    name: custom-http-auth
    allowedRoutes:
      namespaces:
        from: "All"
  - protocol: HTTP
    port: 84
    name: custom-http-invalid-attach
    allowedRoutes:
      namespaces:
        from: "All"
  - protocol: HTTP
    port: 80
    name: custom-http
    allowedRoutes:
      namespaces:
        from: "All"
  - protocol: TCP
    port: 81
    name: custom-tcp
    allowedRoutes:
      namespaces:
        from: "All"
  - protocol: HTTPS
    port: 443
    name: custom-https
    tls:
      certificateRefs:
        - name: "certificate"
    allowedRoutes:
      namespaces:
        from: "All"
