acceptance/tests/fixtures/cases/custom-api-gateway/jwt-auth/external-ref-other-ns.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1alpha1
kind: RouteAuthFilter
metadata:
  name: route-jwt-auth-filter-other
  namespace: other
spec:
  #TODO:: if we remove it then we need to update the test to not use this filter
  jwtCustom:
    providers:
    - name: "local"
      verifyClaims:
      - path:
          - role
        value: doctor
