acceptance/tests/fixtures/cases/custom-api-gateway/jwt-auth/httproute-auth.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-http-route-auth
spec:
  parentRefs:
  - name: custom-gateway
    sectionName: custom-http-auth
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: "/admin"
      backendRefs:
        - name: static-server
          port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: consul.hashicorp.com
          kind: RouteAuthFilter
          name: route-jwt-auth-filter
    - matches:
      - path:
          type: PathPrefix
          value: "/pet"
      backendRefs:
        - name: static-server
          port: 8080
