acceptance/tests/fixtures/cases/custom-api-gateway/jwt-auth/httproute-no-auth-on-auth-listener.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-http-route-no-auth-on-auth-listener
spec:
  parentRefs:
  - name: custom-gateway
    sectionName: custom-http-auth
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: "/admin-no-auth"
      backendRefs:
        - name: static-server
          port: 8080
    - matches:
      - path:
          type: PathPrefix
          value: "/pet-no-auth"
      backendRefs:
        - name: static-server
          port: 8080
