acceptance/tests/fixtures/cases/custom-api-gateway/jwt-auth/httproute.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-http-route
spec:
  parentRefs:
  - name: custom-gateway
    sectionName: custom-http
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: "/v1"
      backendRefs:
      - name: static-server
        port: 8080
