acceptance/tests/fixtures/cases/custom-api-gateway/jwt-auth/httproute2-auth.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1beta1
kind: HTTPRoute
metadata:
  name: custom-http-route2-auth
spec:
  parentRefs:
  - name: custom-gateway
    sectionName: custom-http-auth
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: "/admin-2"
      backendRefs:
        - name: static-server
          port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: consul.hashicorp.com
          kind: RouteAuthFilter
          name: route-jwt-auth-filter
    - matches:
      - path:
          type: PathPrefix
          value: "/pet-2"
      backendRefs:
        - name: static-server
          port: 8080
